# simple_file_server

./: .gitignore  ARCHITECTURE.md  Cargo.toml  EXPORT_GUIDE.md  PERMISSION_CONFIG.md  README.md  config.toml  generate_certs.ps1  generate_certs.sh
.devcontainer/: devcontainer.json
log/: app.log.2025-12-25
src/: extractors.rs  main.rs  model.rs  router.rs  utils.rs
src/dao/: app_state.rs  config.rs  mod.rs
src/handler/: download.rs  files.rs  list.rs  login.rs  mod.rs  upload.rs
src/model/: app_state.rs  auth.rs  config.rs  file.rs  mod.rs
static/: index.html  login.html
