[package]
name = "simple_file_manager"
version = "0.1.0"
edition = "2024"

[dependencies]

# Web框架和相关依赖
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tower = "0.4"
uuid = { version = "1", features = ["v4"] }
async-trait = "0.1"
thiserror = "1"
tokio-util = "0.7"
mime = "0.3"
glob = "0.3"
tower-http = { version = "0.5", features = ["fs"] }
# 日志依赖
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"