[package]
name = "simple_file_manager"
version = "0.1.0"
edition = "2024"

[dependencies]

# Web框架和相关依赖
axum = { version = "0.8.8", features = ["multipart"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
toml = "0.9.8"
tower = "0.5.2"
uuid = { version = "1.19.0", features = ["v4"] }
async-trait = "0.1.89"
thiserror = "2.0.17"
tokio-util = { version = "0.7.17", features = ["io"] }
mime = "0.3.17"
glob = "0.3.3"
tower-http = { version = "0.6.8", features = ["fs"] }
tempfile = "3.24.0"
zip = "7.0.0"
bytes = "1.11.0"
futures-util = "0.3" # 用于 StreamExt

# 日志和追踪依赖
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-appender = "0.2.4"

# MIME类型猜测
mime_guess = "2.0.5"

# 文件名清理和HTTPS 支持
sanitize-filename = "*"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
rustls-pemfile = "2.2.0"

[dependencies.rustls]
version = "0.23.35"
default-features = false
features = ["ring", "tls12"]

[dependencies.tokio-rustls]
version = "0.26.4"
default-features = false
features = ["ring", "tls12"]